Fixed GIF  left and right arrow spacing issue

--- a/src/components/sub-tab-page/sub-tab-page.css
+++ b/src/components/sub-tab-page/sub-tab-page.css
@@ -15,12 +15,16 @@
   left: 0;
 }
 .carousel .slider-wrapper {
-  width: calc(100% - 85px)!important;
+  width: calc(100% - 68px)!important;
 }
+
 .carousel.carousel-slider button {
   position: absolute;
   top: 0;
   bottom: 0;
+}
+.nextpage-lm {
+  right: 20px;
 }
 .carousel.carousel-slider .control-next {
   right: 0;
@@ -245,7 +249,7 @@
 }
 #portfolio .carousel .slide iframe {
   display: block;
-  width: 680px;
+  width: 672px;
   margin: auto;
   border: 0;
 }
@@ -270,7 +274,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 748px !important;
+  width: 738px !important;
+  padding: 0px 10px
 }
 .carousel.carousel-slider .control-next {
   transform: rotate(180deg);
